--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
 
-      - setup_remote_docker:
+      - setup_remote_docker
 
       - run:
           name: Print Docker version
